FIX Wrap

--- a/gatsby-site/src/_core/components/console-simulator.css
+++ b/gatsby-site/src/_core/components/console-simulator.css
@@ -8,7 +8,7 @@ div.console-simulator {
 
 .console-simulator span {
     font-family: monospace;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .console-simulator-cursor {
